java mem
Signed-off-by: Conke Hu <conke.hu@maxwit.com>